Fix dot position to align with last stationary circle

--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -132,7 +132,7 @@
 .simple-timeline.animate::after {
   content: '';
   position: absolute;
-  left: -4px;
+  left: -6px;
   top: 4px;
   width: 10px;
   height: 10px;
@@ -147,7 +147,7 @@
     top: 4px;
   }
   100% {
-    top: calc(100% - 28px);
+    top: calc(100% - 76px);
   }
 }
 
